package monitor;

public interface Observer {
    void update(String event);
}
